<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MainActivity"
    android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_marginTop="20dp"
                android:text="@string/select_theme" />

            <Spinner
                android:id="@+id/SpinnerThemes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/themeHint"
                android:layout_weight="1"
                android:prompt="@string/themetype" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_marginTop="20dp"
                android:text="@string/title_report" />

            <EditText
                android:id="@+id/ReportTitile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_marginTop="20dp"
                android:text="@string/tags_report" />

            <EditText
                android:id="@+id/ReportTags"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_marginTop="20dp"
                android:text="@string/des_report" />

            <EditText
                android:id="@+id/ReportDescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:layout_weight="2"
                android:lines="4" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sendbutton" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="100dp"
                android:text="@string/cancelbutton" />

</LinearLayout>