<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".CreateTheme">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:text="@string/theme_name" />

    <EditText
        android:id="@+id/themename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:inputType="text"
        android:ems="10"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:text="@string/theme_description" />

    <EditText
        android:id="@+id/themedescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.5"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnTakePicture"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/take_a_picture"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="229dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:layout_weight="8"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/brightnessLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:text="Brightness" />

    <SeekBar
        android:id="@+id/brightness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5" />

    <TextView
        android:id="@+id/contrastLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:text="Contrast" />

    <SeekBar
        android:id="@+id/contrast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:max="50" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:layout_weight="1"
        android:text="@string/sendbutton"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="start"
        android:layout_weight="1"
        android:text="@string/cancelbutton"
        android:textSize="12sp" />

</LinearLayout>